
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int stderr ;

void usage(char *pname)
{
 fprintf(stderr, "usage: %s -hp\n", pname);
 fprintf(stderr, "\t-h <host/ip> of the ircd\n\t-p <port> default is 6667\n\n");
 fprintf(stderr, "\tremember that the IP the exploit is running at must\n");
 fprintf(stderr, "\tmatch to a servers I-Line, else this exploit will fail..\n\n");
 exit(1);
}
